--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,14 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content" presistent="true">
+  <ion-toolbar>
+    <ion-title>Navigation</ion-title>
+  </ion-toolbar>
+  <ion-content>
+    <ion-list>
+      <ion-list-header>Menu</ion-list-header>
+      <button menuClose ion-item>Home</button>
+      <button menuClose ion-item>Home</button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav [root]="rootPage" #content></ion-nav>
