--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content" presistent="true">
+<ion-menu [content]="content" presistent="true" type="reveal">
   <ion-toolbar>
     <ion-title>Navigation</ion-title>
   </ion-toolbar>
