--- a/src/pages/interests/interests.scss
+++ b/src/pages/interests/interests.scss
@@ -1,9 +1,14 @@
 page-interests {
+  ion-item-divider {
+    span {
+      text-transform: capitalize;
+    }
+  }
   .category-card {
     position: relative;
     margin: 0;
     width: auto;
-    h2 {
+    h4 {
       text-align: center;
       text-transform: capitalize;
     }
@@ -25,6 +30,9 @@ page-interests {
       }
     }
   }
+  .footer-placholder {
+    height: 25px;
+  }
   .footer {
     position: absolute;
     transition: all 0.5s;
@@ -35,13 +43,13 @@ page-interests {
 /*responsive styles*/
 /*******************/
 
-@media screen and (max-width: 320px) {
-
-  page-interests {
-    .category-card {
-      h2 {
-        font-size: 1em;
-      }
-    }
-  }
-}
+//@media screen and (max-width: 320px) {
+//
+//  page-interests {
+//    .category-card {
+//      h4 {
+//        font-size: 1em;
+//      }
+//    }
+//  }
+//}
