--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,8 +19,8 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
-$primaryColor: #222;
-$secondaryColor: #ced5df;
+$primaryColor: #000;
+$secondaryColor: #c4d5ed;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -31,7 +31,7 @@ $secondaryColor: #ced5df;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #488aff,
+  primary: #6494dd,
   secondary: $secondaryColor,
   danger: #f53d3d,
   light: #f4f4f4,
