--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,55 @@
-<ion-menu [content]="content" presistent="true" type="reveal">
-  <ion-toolbar>
-    <ion-title>Navigation</ion-title>
+<ion-menu [content]="content" presistent="true" [swipeEnabled]="false" type="reveal">
+  <ion-toolbar class="nav-header">
+    <ion-title>Log in</ion-title>
   </ion-toolbar>
   <ion-content>
-    <ion-list>
-      <ion-list-header>Menu</ion-list-header>
-      <button menuClose ion-item>Home</button>
-      <button menuClose ion-item>Home</button>
-    </ion-list>
+    <div class="nav-menu">
+      <ion-list no-lines>
+        <!--<ion-list-header>Menu</ion-list-header>-->
+        <button (click)="routeToHome()" class="primary-item" menuClose ion-item *ngIf="userType != 'trainingCenter'">
+          <ion-icon name="home"></ion-icon>
+          Home
+        </button>
+        <button class="primary-item" menuClose ion-item *ngIf="userType == 'trainingCenter'">
+          <ion-icon name="home"></ion-icon>
+          TrainingCenterName
+        </button>
+        <button class="primary-item" menuClose ion-item *ngIf="userType == 'trainingCenter' || userType == 'student'">
+          <ion-icon name="notifications"></ion-icon>
+          Notifications
+        </button>
+        <!--<button class="primary-item" menuClose ion-item *ngIf="userType == 'student'">-->
+        <!--<i class="fa fa-id-badge" aria-hidden="true"></i>-->
+        <!--My ID's-->
+        <!--</button>-->
+        <button class="primary-item" menuClose ion-item *ngIf="userType == 'trainingCenter'">
+          <ion-icon name="add-circle"></ion-icon>
+          Publish new Course
+        </button>
+      </ion-list>
+      <!--<div class="menu-divider"></div>-->
+      <ion-list no-lines>
+        <!--<button class="primary-item" menuClose ion-item (click)="routeToCategories()" >-->
+        <!--<i class="fa fa-th-list" aria-hidden="true"></i>-->
+        <!--Categories-->
+        <!--</button>-->
+        <button class="primary-item" menuClose ion-item>
+          <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+          Training Centers
+        </button>
+        <!--<button class="primary-item" menuClose ion-item *ngIf="userType != 'trainingCenter'">-->
+        <!--<ion-icon name="thumbs-up"></ion-icon>-->
+        <!--Interested-->
+        <!--</button>-->
+      </ion-list>
+      <div class="menu-divider"></div>
+      <ion-list no-lines>
+        <!--<button menuClose class="secondry-item" ion-item (click)="promptChooseCountry()">Choose Country</button>-->
+        <!--<button menuClose class="secondry-item" ion-item (click)="promptChooseLanguage()">Choose Language</button>-->
+        <button menuClose class="secondry-item" ion-item>Settings</button>
+        <button menuClose class="secondry-item" ion-item>Contact Us</button>
+      </ion-list>
+    </div>
   </ion-content>
 </ion-menu>
 
