--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,52 @@
 // http://ionicframework.com/docs/theming/
+@import "../theme/style-utility";
 
+html body {
+  .sub-title {
+    color: $mid;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1em;
+  }
+  .nav-header {
+    height: 100px;
+  }
+  .nav-menu {
+    margin-top: 100px;
+    .primary-item {
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+    .secondry-item {
+      font-size: 0.9em;
+    }
+  }
+  .menu-divider {
+    width: 100%;
+    height: 2px;
+    border-top: 1px solid darkgrey;
+  }
+  .rating {
+    ul {
+      padding: 0px;
+      margin-top: 5px;
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: flex-start;
+      &.rating {
+        padding: 1px 1px !important;
+        background: none;
+        color: #ffb400;
+        margin: 10px auto 20px auto !important;
+        ion-icon {
+          margin: 1%;
+          font-size: 17px;
+          //border: 1px solid black;
+        }
+      }
+    }
+  }
+}
 
 // App Global Sass
 // --------------------------------------------------
