--- a/src/components/course-thumbnail/course-thumbnail.html
+++ b/src/components/course-thumbnail/course-thumbnail.html
@@ -3,15 +3,15 @@
   <ion-card-content>
     <h3 class="sub-title">{{course.name}}</h3>
     <h4>{{course.trainingCenter}}</h4>
-    <!--<ion-row>-->
-    <!--<ion-col col-12>-->
-    <rating style="width: 100%;" class="rating" [(ngModel)]="course.rating"
-            readOnly="true"
-            max="5"
-    >
-    </rating>
-    <!--</ion-col>-->
-    <!--</ion-row>-->
+    <!--<rating style="width: 100%;" class="rating" [(ngModel)]="course.rating"-->
+            <!--readOnly="true"-->
+            <!--max="5"-->
+    <!--&gt;-->
+    <!--</rating>-->
+    <!--this div is a placholder until use rating module-->
+    <div style="height: 50px">
+
+    </div>
     <h5 class="fake-price">{{course.fakePrice}}</h5>
     <h5 class="price">{{course.price}}</h5>
     <span>EGP</span>
