--- a/src/components/course-thumbnail/course-thumbnail.scss
+++ b/src/components/course-thumbnail/course-thumbnail.scss
@@ -1,8 +1,8 @@
 course-thumbnail {
   .course-thumbnail-card {
     margin: 0;
-    width: auto;
-    //height: 210px;
+    width: 150px;
+    height: 200px;
     .sub-title, h4 {
       //display: inline-block;
       width: 100%;
