--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,6 @@
 @import "../../theme/style-utility";
 
-//page-home {
+page-home {
 .menu-icon {
   font-size: 2.2em;
 }
@@ -41,4 +41,4 @@ ion-content {
   }
 }
 
-//}
+}
