--- a/src/theme/style-utility.scss
+++ b/src/theme/style-utility.scss
@@ -1,4 +1,5 @@
-$grey: rgb(230, 230, 230);
+$grey: rgb(220, 220, 220);
 $dark: #000;
 $mid: #6494dd;
 $light: #ced5df;
+$backgroundColor: rgb(235, 235, 235);
