--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,11 +2,20 @@
 @import "../theme/style-utility";
 
 html body {
+  .body {
+    background-color: $backgroundColor;
+  }
+  ion-title {
+    text-transform: capitalize;
+  }
   .sub-title {
     color: $mid;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 1em;
+    font-size: 75%;
+  }
+  .menu-icon {
+    font-size: 3rem;
   }
   .nav-header {
     height: 100px;
@@ -25,6 +34,9 @@ html body {
     width: 100%;
     height: 2px;
     border-top: 1px solid darkgrey;
+  }
+  .icon-in-button {
+    margin-right: 5px
   }
   .rating {
     ul {
