--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,34 +1,39 @@
 <ion-menu [content]="content" presistent="true" [swipeEnabled]="false" type="reveal">
   <ion-toolbar class="nav-header">
-    <ion-title>Log in</ion-title>
+    <ion-title>
+      <button *ngIf="!userData" ion-button clear (click)="routeToSignIn()" menuClose>Log in</button>
+      <div *ngIf="userData" class="user-data">
+        <ion-row>
+          <div class="photo-container">
+            <img [src]="userData?.photo">
+          </div>
+          <h4 class="sub-title">{{userData?.name}}</h4>
+        </ion-row>
+        <ion-row>
+          <button ion-button clear (click)="signOut()" menuClose>log out</button>
+        </ion-row>
+      </div>
+    </ion-title>
   </ion-toolbar>
   <ion-content>
     <div class="nav-menu">
       <ion-list no-lines>
         <!--<ion-list-header>Menu</ion-list-header>-->
-        <button (click)="routeToHome()" class="primary-item" menuClose ion-item *ngIf="userType != 'trainingCenter'">
+        <button (click)="routeToHome()" class="primary-item" menuClose ion-item
+                *ngIf="!userData || userData.userType == 'student'">
           <ion-icon name="home"></ion-icon>
           Home
         </button>
-        <button class="primary-item" menuClose ion-item *ngIf="userType == 'trainingCenter'">
+        <button class="primary-item" menuClose ion-item *ngIf="userData && userData.userType == 'trainingCenter'">
           <ion-icon name="home"></ion-icon>
           TrainingCenterName
         </button>
-        <button class="primary-item" menuClose ion-item *ngIf="userType == 'trainingCenter' || userType == 'student'">
+        <button class="primary-item" menuClose ion-item
+                *ngIf="userData">
           <ion-icon name="notifications"></ion-icon>
           Notifications
         </button>
-        <!--<button class="primary-item" menuClose ion-item *ngIf="userType == 'student'">-->
-        <!--<i class="fa fa-id-badge" aria-hidden="true"></i>-->
-        <!--My ID's-->
-        <!--</button>-->
-        <button class="primary-item" menuClose ion-item *ngIf="userType == 'trainingCenter'">
-          <ion-icon name="add-circle"></ion-icon>
-          Publish new Course
-        </button>
-      </ion-list>
-      <!--<div class="menu-divider"></div>-->
-      <ion-list no-lines>
+
         <!--<button class="primary-item" menuClose ion-item (click)="routeToCategories()" >-->
         <!--<i class="fa fa-th-list" aria-hidden="true"></i>-->
         <!--Categories-->
@@ -37,11 +42,36 @@
           <i class="fa fa-graduation-cap" aria-hidden="true"></i>
           Training Centers
         </button>
-        <!--<button class="primary-item" menuClose ion-item *ngIf="userType != 'trainingCenter'">-->
+        <!--<button class="primary-item" menuClose ion-item *ngIf="userData.userType != 'trainingCenter'">-->
         <!--<ion-icon name="thumbs-up"></ion-icon>-->
         <!--Interested-->
         <!--</button>-->
+        <!--<button class="primary-item" menuClose ion-item *ngIf="userData.userType == 'student'">-->
+        <!--<i class="fa fa-id-badge" aria-hidden="true"></i>-->
+        <!--My ID's-->
+        <!--</button>-->
+        <button class="primary-item" menuClose ion-item *ngIf="userData && userData.userType == 'trainingCenter'">
+          <ion-icon name="add-circle"></ion-icon>
+          Publish new Course
+        </button>
       </ion-list>
+      <!--<div class="menu-divider"></div>-->
+
+      <!--<ion-list no-lines>-->
+        <!--<button class="primary-item" menuClose ion-item (click)="routeToCategories()" >-->
+        <!--<i class="fa fa-th-list" aria-hidden="true"></i>-->
+        <!--Categories-->
+        <!--</button>-->
+        <!--<button (click)="routeToTrainingCenter()" class="primary-item" menuClose ion-item>-->
+          <!--<i class="fa fa-graduation-cap" aria-hidden="true"></i>-->
+          <!--Training Centers-->
+        <!--</button>-->
+        <!--<button class="primary-item" menuClose ion-item *ngIf="userData.userType != 'trainingCenter'">-->
+        <!--<ion-icon name="thumbs-up"></ion-icon>-->
+        <!--Interested-->
+        <!--</button>-->
+      <!--</ion-list>-->
+
       <div class="menu-divider"></div>
       <ion-list no-lines>
         <button menuClose class="secondry-item" ion-item (click)="promptChooseCountry()">Choose Country</button>
