--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,7 +19,7 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
-$primaryColor: #000;
+$primaryColor: #09014a;
 $secondaryColor: #c4d5ed;
 
 // Named Color Variables
