--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,6 +22,9 @@ html body {
   }
   .nav-menu {
     margin-top: 100px;
+    button {
+      color: $dark;
+    }
     .primary-item {
       font-size: 1.2em;
       font-weight: bold;
@@ -56,6 +59,17 @@ html body {
           //border: 1px solid black;
         }
       }
+    }
+  }
+  .user-data {
+    margin-top: 15px;
+    .photo-container {
+      overflow: hidden;
+      width: 50px;
+      height: 50px;
+      border-radius: 100px;
+      margin-right: 10px;
+      border: 2px solid white;
     }
   }
 }
