--- a/src/components/category/category.scss
+++ b/src/components/category/category.scss
@@ -1,3 +1,5 @@
+@import "../../theme/style-utility";
+
 category {
   .category-Container {
     background-color: white;
@@ -17,6 +19,7 @@ category {
     align-items: center;
     justify-content: center;
     text-align: center;
+    color: $dark;
     i {
       font-size: 1.5em;
     }
