working on sign in

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -74,6 +74,8 @@ html body {
   }
 }
 
+//$text-input-highlight-color-invalid: black;
+
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
