--- a/src/app/app.html
+++ b/src/app/app.html
@@ -72,7 +72,10 @@
         <!--</button>-->
       <!--</ion-list>-->
 
-      <div class="menu-divider"></div>
+      <!--<div class="menu-divider"></div>-->
+
+      <ion-item-divider></ion-item-divider>
+
       <ion-list no-lines>
         <button menuClose class="secondry-item" ion-item (click)="promptChooseCountry()">Choose Country</button>
         <button menuClose class="secondry-item" ion-item (click)="promptChooseLanguage()">Choose Language</button>
