--- a/src/components/category/category.component.scss
+++ b/src/components/category/category.component.scss
@@ -10,27 +10,32 @@ category {
     margin-left: 10px;
   }
   .category-title {
-    background-color: white;
-    box-sizing: border-box;
-    border-right: 1px solid $light;
+    //background-color: white;
+    //box-sizing: border-box;
+    //border-right: 1px solid $light;
     //margin-right: 15px;
-    height: 75%;
+    //height: 75%;
+    height: 30px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    text-align: center;
+    justify-content: space-between;
+    //text-align: center;
+    //font-size: 1.25em;
     color: $dark;
     .category-icon {
+      display: flex;
+      align-items: center;
       img {
-        width: 30px;
+        width: 20px;
+      }
+      h4 {
+        font-size: 1em;
+        margin-bottom: 0;
       }
     }
-    h4 {
-      font-size: 0.8em;
-    }
     button {
-      font-size: 0.8em;
-      height: 2.5rem;
+      font-size: 0.85em;
+      //height: 1em;
     }
   }
   ion-scroll {
@@ -40,10 +45,10 @@ category {
       course-thumbnail {
         margin: 7px;
         &:last-child {
-          padding-right: 5px;
+          padding-right: 15px;
         }
         &:first-child {
-          padding-left: 10px;
+          padding-left: 5px;
         }
       }
     }
