--- a/src/pages/training-center-details/training-center-details.page.scss
+++ b/src/pages/training-center-details/training-center-details.page.scss
@@ -40,6 +40,14 @@ page-training-center-details {
         }
       }
     }
+    .contact-button-container {
+      margin-left: auto;
+      margin-right: auto;
+      width: 90%;
+      ion-fab {
+        position: relative !important;
+      }
+    }
   }
 
   .page-body {
